--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.22.12",
     "@stripe/stripe-js": "^5.6.0",
+    "@tailwindcss/vite": "^4.0.7",
+    "heroicons": "^2.2.0",
+    "lucide-react": "^0.475.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router": "^7.2.0",
+    "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -26,7 +31,7 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "postcss": "^8.5.2",
-    "tailwindcss": "^4.0.6",
+    "tailwindcss": "^4.0.7",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0"
