--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@clerk/clerk-react": "^5.22.12",
     "@stripe/stripe-js": "^5.6.0",
     "@tailwindcss/vite": "^4.0.7",
+    "framer-motion": "^12.4.7",
     "heroicons": "^2.2.0",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0"
   },
